# Journaled

./: Cargo.toml  README.md
src/: main.rs  noteapp.rs
