[package]
name = "Journaled"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
eframe = "0.33.0"
egui = "0.33.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.dev]
opt-level = 0       # No optimization (faster build)
debug = 0           # No debug symbols
incremental = true
codegen-units = 256 # Parallelize codegen across cores

[profile.release]
opt-level = 3
lto = "thin"      # "thin" LTO gives good balance between speed and performance
codegen-units = 1 # Better runtime perf, slower compile (only for release)
strip = "symbols" # Smaller binary size
